# sketchy

./: CMakeLists.txt  README.rst  conan.cmake
src/: logger.hpp  main.cpp  qt_fmt.hpp  storage.cpp  storage.hpp
src/ui/: canvas.cpp  canvas.hpp  infinite_scroll.cpp  infinite_scroll.hpp  main_window.cpp  main_window.hpp  radial_menu.cpp  radial_menu.hpp
test/: CMakeLists.txt  main.cpp
